unpackaged/main/default/objects/Program__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Brand</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1</booleanFilter>
        <filterItems>
            <field>Tags__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>PL4 Brand</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Tags__c</referenceTo>
    <relationshipLabel>Programs</relationshipLabel>
    <relationshipName>Programs2</relationshipName>
    <type>Lookup</type>
</CustomField>