unpackaged/main/default/objects/Program__c/fields/BrandFamilyName__c.field-meta.xml
<CustomField>
    <fullName>BrandFamilyName__c</fullName>
    <formula>Brand__r.BrandFamily__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Brand Family Name</label>
    <type>Text</type>
</CustomField>