unpackaged/main/default/objects/Program__c/fields/BrandObjective__c.field-meta.xml
<CustomField>
    <fullName>BrandObjective__c</fullName>
    <label>Brand Objective</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Execute sampling programs</fullName>
            </value>
            <value>
                <fullName>Objective 2</fullName>
            </value>
            <value>
                <fullName>Objective 3</fullName>
            </value>
            <value>
                <fullName>Objective 4</fullName>
            </value>
            <value>
                <fullName>Objective 5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>