unpackaged/main/default/objects/Program__c/fields/BrandQuality__c.field-meta.xml
<CustomField>
    <fullName>BrandQuality__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brand Quality</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Tags__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Brand Quality</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Tags__c</referenceTo>
    <relationshipLabel>Programs (Brand Quality)</relationshipLabel>
    <relationshipName>Programs4</relationshipName>
    <type>Lookup</type>
</CustomField>