unpackaged/main/default/objects/Program__c/fields/BrandStrategy__c.field-meta.xml
<CustomField>
    <fullName>BrandStrategy__c</fullName>
    <label>Brand Strategy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Drive Awareness</fullName>
            </value>
            <value>
                <fullName>Strategy 2</fullName>
            </value>
            <value>
                <fullName>Strategy 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>