unpackaged/main/default/objects/Program__c/fields/BrandVariety__c.field-meta.xml
<CustomField>
    <fullName>BrandVariety__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brand Variety</label>
    <referenceTo>Tags__c</referenceTo>
    <relationshipLabel>Programs (Brand Variety)</relationshipLabel>
    <relationshipName>Programs3</relationshipName>
    <type>Lookup</type>
</CustomField>