unpackaged/main/default/objects/Program__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SpendDescription__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Off Premise</fullName>
            </value>
            <value>
                <fullName>On Premise</fullName>
            </value>
            <value>
                <fullName>Non-Premise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>