unpackaged/main/default/objects/Program__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Country for the program</description>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>AUS</fullName>
            </value>
            <value>
                <fullName>USA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>