unpackaged/main/default/objects/Program__c/fields/CreatedByName__c.field-meta.xml
<CustomField>
    <fullName>CreatedByName__c</fullName>
    <formula>CreatedBy.FirstName + ' ' + CreatedBy.LastName</formula>
    <label>CreatedByName</label>
    <type>Text</type>
</CustomField>