unpackaged/main/default/objects/Program__c/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Distributor</value>
        </filterItems>
        <filterItems>
            <field>Account.ProgramPartner__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Account.TerritoryTag__c</field>
            <operation>equals</operation>
            <valueField>$Source.Territory__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Programs</relationshipLabel>
    <relationshipName>Programs_distributors</relationshipName>
    <type>Lookup</type>
</CustomField>