unpackaged/main/default/objects/Program__c/fields/FocusType__c.field-meta.xml
<CustomField>
    <fullName>FocusType__c</fullName>
    <label>Focus Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>#1 Priority</fullName>
            </value>
            <value>
                <fullName>Core Priority</fullName>
            </value>
            <value>
                <fullName>Other Priority</fullName>
            </value>
            <value>
                <fullName>Local Priority</fullName>
            </value>
            <value>
                <fullName>Cordials Kicker</fullName>
            </value>
            <value>
                <fullName>Program</fullName>
            </value>
            <value>
                <fullName>2018 Program</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>