unpackaged/main/default/objects/Program__c/fields/Funds__c.field-meta.xml
<CustomField>
    <fullName>Funds__c</fullName>
    <label>Funds</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EG</fullName>
            </value>
            <value>
                <fullName>LMF</fullName>
            </value>
            <value>
                <fullName>BI</fullName>
            </value>
            <value>
                <fullName>Focus Calendar Priority</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>