unpackaged/main/default/objects/Program__c/fields/IOCode__c.field-meta.xml
<CustomField>
    <fullName>IOCode__c</fullName>
    <label>IO Code</label>
    <length>12</length>
    <type>Text</type>
</CustomField>