unpackaged/main/default/objects/Program__c/fields/LastModifiedByName__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedByName__c</fullName>
    <formula>LastModifiedBy.FirstName + ' ' +  LastModifiedBy.LastName</formula>
    <label>LastModifiedByName</label>
    <type>Text</type>
</CustomField>