unpackaged/main/default/objects/Program__c/fields/Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Name__c</fullName>
    <formula>IF( ISBLANK(Owner:User.Id), Owner:Queue.Name, Owner:User.FirstName &amp; " " &amp; Owner:User.LastName )</formula>
    <label>Owner Name</label>
    <type>Text</type>
</CustomField>