unpackaged/main/default/objects/Program__c/fields/ProgrammingType__c.field-meta.xml
<CustomField>
    <fullName>ProgrammingType__c</fullName>
    <label>Programming Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SpendDescription__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Display</fullName>
                <color>#A845DC</color>
                <label>Display</label>
            </value>
            <value>
                <fullName>Incentive</fullName>
                <color>#78C953</color>
                <label>Incentive</label>
            </value>
            <value>
                <fullName>POS</fullName>
                <color>#F3D904</color>
                <label>POS</label>
            </value>
            <value>
                <fullName>Promotion</fullName>
                <color>#0B6FCE</color>
                <label>Promotion</label>
            </value>
            <value>
                <fullName>Sampling</fullName>
                <color>#E27001</color>
                <label>Sampling</label>
            </value>
            <value>
                <fullName>Sponsorship</fullName>
                <color>#A53711</color>
                <label>Sponsorship</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <color>#66E9BD</color>
                <label>Other</label>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Menu</fullName>
                <color>#3366FF</color>
                <label>Menu</label>
            </value>
            <value>
                <fullName>Other Activation</fullName>
                <color>#FF6666</color>
                <label>Other Activation</label>
            </value>
            <value>
                <fullName>Shelf</fullName>
            </value>
            <value>
                <fullName>Distribution Off</fullName>
            </value>
            <value>
                <fullName>Distribution On</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>