unpackaged/main/default/objects/Program__c/fields/RecordTypeName__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeName__c</fullName>
    <formula>RecordType.Name</formula>
    <label>Record Type Name</label>
    <type>Text</type>
</CustomField>