unpackaged/main/default/objects/Program__c/fields/SAP_Code__c.field-meta.xml
<CustomField>
    <fullName>SAP_Code__c</fullName>
    <description>Code used to send information to SAP</description>
    <label>SAP Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>