unpackaged/main/default/objects/Program__c/fields/Search_Text__c.field-meta.xml
<CustomField>
    <fullName>Search_Text__c</fullName>
    <label>Search Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>