unpackaged/main/default/objects/Program__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Territory</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Tags__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Territory</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Tags__c</referenceTo>
    <relationshipLabel>Programs (Territory)</relationshipLabel>
    <relationshipName>Programs_Territory</relationshipName>
    <type>Lookup</type>
</CustomField>