unpackaged/main/default/objects/Program__c/fields/TerritoryName__c.field-meta.xml
<CustomField>
    <fullName>TerritoryName__c</fullName>
    <formula>Territory__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Territory Name</label>
    <type>Text</type>
</CustomField>