unpackaged/main/default/objects/Program__c/recordTypes/Platform.recordType-meta.xml
<RecordType>
    <fullName>Platform</fullName>
    <active>true</active>
    <description>Platform used to additionally classify a campaign</description>
    <label>Platform</label>
</RecordType>