unpackaged/main/default/objects/Program__c/listViews/Advocacy_Program.listView-meta.xml
<ListView>
    <fullName>Advocacy_Program</fullName>
    <filterScope>Queue</filterScope>
    <label>Advocacy</label>
    <queue>Advocacy</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>