unpackaged/main/default/objects/Program__c/listViews/Alabama_Program.listView-meta.xml
<ListView>
    <fullName>Alabama_Program</fullName>
    <filterScope>Queue</filterScope>
    <label>Alabama</label>
    <queue>Alabama</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>