unpackaged/main/default/objects/Program__c/listViews/All_Brand_Investment_Programs.listView-meta.xml
<ListView>
    <fullName>All_Brand_Investment_Programs</fullName>
    <columns>NAME</columns>
    <columns>Parent__c</columns>
    <columns>TerritoryName__c</columns>
    <columns>BrandName__c</columns>
    <columns>ProgramFocus__c</columns>
    <columns>ProgrammingType__c</columns>
    <columns>Channel__c</columns>
    <columns>SpendDescription__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Program__c.Brand_Investment_Programs</value>
    </filters>
    <label>All Brand Investment Programs</label>
</ListView>