unpackaged/main/default/objects/Program__c/listViews/All_Focus_Calendar_Priorities.listView-meta.xml
<ListView>
    <fullName>All_Focus_Calendar_Priorities</fullName>
    <columns>NAME</columns>
    <columns>FocusType__c</columns>
    <columns>TerritoryName__c</columns>
    <columns>BrandName__c</columns>
    <columns>ProgrammingType__c</columns>
    <columns>ProgramFocus__c</columns>
    <columns>Channel__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Program__c.National_Priority,Program__c.LocalPriority</value>
    </filters>
    <label>All Focus Calendar Priorities</label>
</ListView>