unpackaged/main/default/objects/Program__c/listViews/All_Focus_Calendar_Priorities_Programs.listView-meta.xml
<ListView>
    <fullName>All_Focus_Calendar_Priorities_Programs</fullName>
    <columns>NAME</columns>
    <columns>FocusType__c</columns>
    <columns>Funds__c</columns>
    <columns>TerritoryName__c</columns>
    <columns>BrandName__c</columns>
    <columns>ProgrammingType__c</columns>
    <columns>ProgramFocus__c</columns>
    <columns>Channel__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All Focus Calendar Priorities &amp; Programs</label>
</ListView>