unpackaged/main/default/objects/Program__c/listViews/American_Stillhouse_Program.listView-meta.xml
<ListView>
    <fullName>American_Stillhouse_Program</fullName>
    <filterScope>Queue</filterScope>
    <label>American Stillhouse</label>
    <queue>American_Stillhouse</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>